force-app/main/default/objects/Itinerary_Activity__c/Itinerary_Activity__c.object-meta.xml
<CustomObject>
    <description>Join table to connect multiple land activities to multiple itinerary records</description>
    <label>Itinerary Activity</label>
    <nameField>
        <label>Itinerary Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itinerary Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>