force-app/main/default/objects/Itinerary_Activity__c/fields/deal__c.field-meta.xml
<CustomField>
    <fullName>deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Itinerary Activities</relationshipLabel>
    <relationshipName>Itinerary_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>