force-app/main/default/objects/Itinerary_Activity__c/fields/main_tour_activity_day__c.field-meta.xml
<CustomField>
    <fullName>main_tour_activity_day__c</fullName>
    <label>Main Tour Activity Day</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>