force-app/main/default/objects/Itinerary_Activity__c/fields/site__c.field-meta.xml
<CustomField>
    <fullName>site__c</fullName>
    <label>Site</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>