force-app/main/default/objects/Itinerary_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>deal__c</columns>
    <columns>site__c</columns>
    <columns>main_tour_activity_day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>